--- a/Core/Core/Features/WrongApp/WrongAppLinkView.xib
+++ b/Core/Core/Features/WrongApp/WrongAppLinkView.xib
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,7 +11,7 @@
             <connections>
                 <outlet property="contentView" destination="Wbu-PY-FHY" id="5VP-ae-vD8"/>
                 <outlet property="logoView" destination="ukk-Yv-xwf" id="mPY-Pf-SjT"/>
-                <outlet property="nameLabel" destination="ULZ-Tr-dLA" id="qhk-V9-03o"/>
+                <outlet property="wordmark" destination="Igk-hO-zPc" id="GHB-PN-pBB"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -33,30 +30,20 @@
                         <constraint firstAttribute="width" constant="48" id="pN1-Y3-4Fg"/>
                     </constraints>
                 </imageView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wordmark" translatesAutoresizingMaskIntoConstraints="NO" id="Igk-hO-zPc" customClass="IconView" customModule="Core" customModuleProvider="target">
-                    <rect key="frame" x="60" y="4" width="123" height="30"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wordmark" translatesAutoresizingMaskIntoConstraints="NO" id="Igk-hO-zPc">
+                    <rect key="frame" x="48" y="4" width="135" height="48"/>
                     <accessibility key="accessibilityConfiguration">
                         <accessibilityTraits key="traits" notEnabled="YES"/>
                     </accessibility>
                     <constraints>
-                        <constraint firstAttribute="width" constant="123" id="2Lq-E0-lwP"/>
-                        <constraint firstAttribute="height" constant="30" id="b2t-7S-Ztc"/>
+                        <constraint firstAttribute="height" constant="48" id="b2t-7S-Ztc"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="string" keyPath="iconColorName" value="tiara"/>
                     </userDefinedRuntimeAttributes>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="STUDENT" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ULZ-Tr-dLA">
-                    <rect key="frame" x="60" y="36" width="42" height="12.5"/>
-                    <accessibility key="accessibilityConfiguration">
-                        <accessibilityTraits key="traits" notEnabled="YES"/>
-                        <bool key="isElement" value="NO"/>
-                    </accessibility>
-                    <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="9"/>
-                    <color key="textColor" red="0.83921568629999999" green="0.25098039220000001" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="gvE-gG-XhM"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <accessibility key="accessibilityConfiguration">
                 <accessibilityTraits key="traits" notEnabled="YES"/>
@@ -64,22 +51,20 @@
             </accessibility>
             <constraints>
                 <constraint firstItem="ukk-Yv-xwf" firstAttribute="leading" secondItem="Wbu-PY-FHY" secondAttribute="leading" id="0xm-ao-gdN"/>
-                <constraint firstItem="ULZ-Tr-dLA" firstAttribute="leading" secondItem="Igk-hO-zPc" secondAttribute="leading" id="H5l-7C-d3U"/>
                 <constraint firstItem="Igk-hO-zPc" firstAttribute="top" secondItem="Wbu-PY-FHY" secondAttribute="top" constant="4" id="OVt-4T-Tus"/>
                 <constraint firstAttribute="trailing" secondItem="Igk-hO-zPc" secondAttribute="trailing" id="asM-5K-Vqd"/>
                 <constraint firstItem="ukk-Yv-xwf" firstAttribute="top" secondItem="Wbu-PY-FHY" secondAttribute="top" id="gTJ-nE-wkm"/>
                 <constraint firstAttribute="bottom" secondItem="ukk-Yv-xwf" secondAttribute="bottom" id="owf-oI-A3t"/>
-                <constraint firstItem="ULZ-Tr-dLA" firstAttribute="top" secondItem="Igk-hO-zPc" secondAttribute="bottom" constant="2" id="spf-jA-KWF"/>
-                <constraint firstItem="Igk-hO-zPc" firstAttribute="leading" secondItem="ukk-Yv-xwf" secondAttribute="trailing" constant="12" id="tZK-HE-aec"/>
+                <constraint firstItem="Igk-hO-zPc" firstAttribute="leading" secondItem="ukk-Yv-xwf" secondAttribute="trailing" id="tZK-HE-aec"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="gvE-gG-XhM"/>
+            <point key="canvasLocation" x="138" y="19"/>
         </view>
     </objects>
     <resources>
         <image name="instructureLine" width="24" height="24"/>
-        <image name="wordmark" width="164" height="40"/>
+        <image name="wordmark" width="178" height="41"/>
     </resources>
 </document>
