--- a/Student/Student/Assignments/AssignmentDetails/StudentAssignmentDetailsViewController.storyboard
+++ b/Student/Student/Assignments/AssignmentDetails/StudentAssignmentDetailsViewController.storyboard
@@ -28,10 +28,10 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="2980"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QTp-Qq-8ZA">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="2553.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="2820.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="VdI-qu-MC8">
-                                                <rect key="frame" x="0.0" y="24" width="375" height="2529.5"/>
+                                                <rect key="frame" x="0.0" y="24" width="375" height="2796.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Assignment Name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kpV-J8-jIO" customClass="DynamicLabel" customModule="Student" customModuleProvider="target">
                                                         <rect key="frame" x="16" y="0.0" width="343" height="20.5"/>
@@ -467,8 +467,12 @@
                                                         <rect key="frame" x="0.0" y="1274.5" width="375" height="267"/>
                                                         <accessibility key="accessibilityConfiguration" identifier="AssingmentDetails.dueSection"/>
                                                     </view>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U3Y-Im-VWs">
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ksW-BL-Arr" customClass="StudentAssignmentDetailsSectionContainerView" customModule="Student" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="1541.5" width="375" height="267"/>
+                                                        <accessibility key="accessibilityConfiguration" identifier="AssingmentDetails.dueSection"/>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U3Y-Im-VWs">
+                                                        <rect key="frame" x="0.0" y="1808.5" width="375" height="267"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Attempts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EkA-bh-wFX" customClass="DynamicLabel" customModule="Student" customModuleProvider="target">
                                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="192"/>
@@ -552,21 +556,21 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Plt-HB-bKp" customClass="StudentAssignmentDetailsSectionContainerView" customModule="Student" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="1808.5" width="375" height="267"/>
+                                                        <rect key="frame" x="0.0" y="2075.5" width="375" height="267"/>
                                                         <accessibility key="accessibilityConfiguration" identifier="AssingmentDetails.submissionTypesSection"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="string" keyPath="headerText" value="Submission Types"/>
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hil-LN-kZQ" customClass="StudentAssignmentDetailsSectionContainerView" customModule="Student" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="2075.5" width="375" height="267.5"/>
+                                                        <rect key="frame" x="0.0" y="2342.5" width="375" height="267.5"/>
                                                         <accessibility key="accessibilityConfiguration" identifier="AssingmentDetails.fileTypesSection"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="string" keyPath="headerText" value="File Types"/>
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G3G-xF-An6" userLabel="Description Header">
-                                                        <rect key="frame" x="0.0" y="2343" width="375" height="186.5"/>
+                                                        <rect key="frame" x="0.0" y="2610" width="375" height="186.5"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SXw-qc-FaX" userLabel="Description Divider" customClass="DividerView" customModule="Student" customModuleProvider="target">
                                                                 <rect key="frame" x="0.0" y="20" width="375" height="1"/>
@@ -609,6 +613,7 @@
                                                     <constraint firstAttribute="trailing" secondItem="s8P-wF-IX6" secondAttribute="trailing" id="3PE-nF-aRT"/>
                                                     <constraint firstItem="s8P-wF-IX6" firstAttribute="leading" secondItem="VdI-qu-MC8" secondAttribute="leading" id="7c4-v7-lcA"/>
                                                     <constraint firstItem="RBf-wD-x1b" firstAttribute="leading" secondItem="VdI-qu-MC8" secondAttribute="leading" id="9BI-aJ-Eh5"/>
+                                                    <constraint firstAttribute="trailing" secondItem="ksW-BL-Arr" secondAttribute="trailing" id="9fZ-fJ-ASp"/>
                                                     <constraint firstItem="hil-LN-kZQ" firstAttribute="leading" secondItem="VdI-qu-MC8" secondAttribute="leading" id="C8a-Tj-Ru8"/>
                                                     <constraint firstItem="eid-3a-E5r" firstAttribute="leading" secondItem="VdI-qu-MC8" secondAttribute="leading" id="Cjg-ZT-IaD"/>
                                                     <constraint firstItem="U3Y-Im-VWs" firstAttribute="leading" secondItem="VdI-qu-MC8" secondAttribute="leading" id="GGT-dj-m6e"/>
@@ -629,6 +634,7 @@
                                                     <constraint firstAttribute="trailing" secondItem="TO1-FI-dAE" secondAttribute="trailing" id="qnT-4Z-HXJ"/>
                                                     <constraint firstAttribute="trailing" secondItem="RBf-wD-x1b" secondAttribute="trailing" id="rzx-DU-0Rc"/>
                                                     <constraint firstItem="C6K-SW-2gW" firstAttribute="leading" secondItem="VdI-qu-MC8" secondAttribute="leading" id="tBk-0X-AqT"/>
+                                                    <constraint firstItem="ksW-BL-Arr" firstAttribute="leading" secondItem="VdI-qu-MC8" secondAttribute="leading" id="twh-3G-XPQ"/>
                                                     <constraint firstAttribute="trailing" secondItem="C6K-SW-2gW" secondAttribute="trailing" id="v7T-7v-5cb"/>
                                                 </constraints>
                                             </stackView>
@@ -641,7 +647,7 @@
                                         </constraints>
                                     </view>
                                     <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q3R-vd-zmQ">
-                                        <rect key="frame" x="0.0" y="2553.5" width="375" height="100"/>
+                                        <rect key="frame" x="0.0" y="2820.5" width="375" height="100"/>
                                         <accessibility key="accessibilityConfiguration" identifier="AssignmentDetails.description">
                                             <bool key="isElement" value="NO"/>
                                         </accessibility>
@@ -705,7 +711,8 @@
                         <outlet property="descriptionHeader" destination="G3G-xF-An6" id="Kjv-H7-hQe"/>
                         <outlet property="descriptionHeadingLabel" destination="NUD-Zm-lzB" id="1vo-Dw-a82"/>
                         <outlet property="descriptionView" destination="q3R-vd-zmQ" id="jPg-GW-koM"/>
-                        <outlet property="dueSection" destination="s8P-wF-IX6" id="ekv-ls-NRq"/>
+                        <outlet property="dueSection1" destination="s8P-wF-IX6" id="ZZu-45-1Ai"/>
+                        <outlet property="dueSection2" destination="ksW-BL-Arr" id="ddO-3j-mqp"/>
                         <outlet property="fileSubmissionButton" destination="4TE-cB-TlA" id="JoP-wp-GYy"/>
                         <outlet property="fileTypesSection" destination="hil-LN-kZQ" id="Bc5-DD-28a"/>
                         <outlet property="gradeHeadingLabel" destination="POu-Bn-aGg" id="NF2-DK-7UI"/>
