--- a/Student/Student/Assignments/AssignmentDetails/StudentAssignmentDetailsViewController.storyboard
+++ b/Student/Student/Assignments/AssignmentDetails/StudentAssignmentDetailsViewController.storyboard
@@ -28,10 +28,10 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="2980"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QTp-Qq-8ZA">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="2820.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="2821.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="VdI-qu-MC8">
-                                                <rect key="frame" x="0.0" y="24" width="375" height="2796.5"/>
+                                                <rect key="frame" x="0.0" y="24" width="375" height="2797.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Assignment Name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kpV-J8-jIO" customClass="DynamicLabel" customModule="Student" customModuleProvider="target">
                                                         <rect key="frame" x="16" y="0.0" width="343" height="20.5"/>
@@ -471,8 +471,18 @@
                                                         <rect key="frame" x="0.0" y="1541.5" width="375" height="267"/>
                                                         <accessibility key="accessibilityConfiguration" identifier="AssingmentDetails.dueSection"/>
                                                     </view>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OVd-ar-2uI" customClass="DividerView" customModule="Student" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="1808.5" width="375" height="1"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="1" id="qEg-lY-JD0"/>
+                                                        </constraints>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="string" keyPath="tintColorName" value="borderMedium"/>
+                                                        </userDefinedRuntimeAttributes>
+                                                    </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U3Y-Im-VWs">
-                                                        <rect key="frame" x="0.0" y="1808.5" width="375" height="267"/>
+                                                        <rect key="frame" x="0.0" y="1809.5" width="375" height="267"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Attempts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EkA-bh-wFX" customClass="DynamicLabel" customModule="Student" customModuleProvider="target">
                                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="192"/>
@@ -556,21 +566,21 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Plt-HB-bKp" customClass="StudentAssignmentDetailsSectionContainerView" customModule="Student" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="2075.5" width="375" height="267"/>
+                                                        <rect key="frame" x="0.0" y="2076.5" width="375" height="267"/>
                                                         <accessibility key="accessibilityConfiguration" identifier="AssingmentDetails.submissionTypesSection"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="string" keyPath="headerText" value="Submission Types"/>
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hil-LN-kZQ" customClass="StudentAssignmentDetailsSectionContainerView" customModule="Student" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="2342.5" width="375" height="267.5"/>
+                                                        <rect key="frame" x="0.0" y="2343.5" width="375" height="267.5"/>
                                                         <accessibility key="accessibilityConfiguration" identifier="AssingmentDetails.fileTypesSection"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="string" keyPath="headerText" value="File Types"/>
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G3G-xF-An6" userLabel="Description Header">
-                                                        <rect key="frame" x="0.0" y="2610" width="375" height="186.5"/>
+                                                        <rect key="frame" x="0.0" y="2611" width="375" height="186.5"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SXw-qc-FaX" userLabel="Description Divider" customClass="DividerView" customModule="Student" customModuleProvider="target">
                                                                 <rect key="frame" x="0.0" y="20" width="375" height="1"/>
@@ -618,6 +628,7 @@
                                                     <constraint firstItem="eid-3a-E5r" firstAttribute="leading" secondItem="VdI-qu-MC8" secondAttribute="leading" id="Cjg-ZT-IaD"/>
                                                     <constraint firstItem="U3Y-Im-VWs" firstAttribute="leading" secondItem="VdI-qu-MC8" secondAttribute="leading" id="GGT-dj-m6e"/>
                                                     <constraint firstAttribute="trailing" secondItem="U3Y-Im-VWs" secondAttribute="trailing" id="JOL-OI-9fm"/>
+                                                    <constraint firstItem="OVd-ar-2uI" firstAttribute="width" secondItem="VdI-qu-MC8" secondAttribute="width" id="Jhu-Al-D9w"/>
                                                     <constraint firstAttribute="trailing" secondItem="eid-3a-E5r" secondAttribute="trailing" id="LCr-yx-8za"/>
                                                     <constraint firstItem="TO1-FI-dAE" firstAttribute="leading" secondItem="VdI-qu-MC8" secondAttribute="leading" id="UlH-N8-TtC"/>
                                                     <constraint firstItem="Cjm-nL-hdm" firstAttribute="width" secondItem="VdI-qu-MC8" secondAttribute="width" id="VrY-bz-rAo"/>
@@ -628,6 +639,7 @@
                                                     <constraint firstItem="G3G-xF-An6" firstAttribute="width" secondItem="VdI-qu-MC8" secondAttribute="width" id="aSS-xO-ODP"/>
                                                     <constraint firstAttribute="trailing" secondItem="Plt-HB-bKp" secondAttribute="trailing" id="f3Z-wB-HlI"/>
                                                     <constraint firstItem="uqK-cv-6c4" firstAttribute="leading" secondItem="VdI-qu-MC8" secondAttribute="leading" constant="16" id="hZO-tX-eDn"/>
+                                                    <constraint firstItem="OVd-ar-2uI" firstAttribute="centerX" secondItem="VdI-qu-MC8" secondAttribute="centerX" id="lzj-6D-cLm"/>
                                                     <constraint firstItem="v0Y-DT-aKL" firstAttribute="width" secondItem="VdI-qu-MC8" secondAttribute="width" id="mrh-yY-1aK"/>
                                                     <constraint firstAttribute="trailing" secondItem="hil-LN-kZQ" secondAttribute="trailing" id="nfg-r7-UVb"/>
                                                     <constraint firstAttribute="trailing" secondItem="kpV-J8-jIO" secondAttribute="trailing" constant="16" id="pBZ-Ud-31u"/>
@@ -647,7 +659,7 @@
                                         </constraints>
                                     </view>
                                     <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q3R-vd-zmQ">
-                                        <rect key="frame" x="0.0" y="2820.5" width="375" height="100"/>
+                                        <rect key="frame" x="0.0" y="2821.5" width="375" height="100"/>
                                         <accessibility key="accessibilityConfiguration" identifier="AssignmentDetails.description">
                                             <bool key="isElement" value="NO"/>
                                         </accessibility>
@@ -713,6 +725,7 @@
                         <outlet property="descriptionView" destination="q3R-vd-zmQ" id="jPg-GW-koM"/>
                         <outlet property="dueSection1" destination="s8P-wF-IX6" id="ZZu-45-1Ai"/>
                         <outlet property="dueSection2" destination="ksW-BL-Arr" id="ddO-3j-mqp"/>
+                        <outlet property="dueSectionsBottomDivider" destination="OVd-ar-2uI" id="sPp-8G-gdQ"/>
                         <outlet property="fileSubmissionButton" destination="4TE-cB-TlA" id="JoP-wp-GYy"/>
                         <outlet property="fileTypesSection" destination="hil-LN-kZQ" id="Bc5-DD-28a"/>
                         <outlet property="gradeHeadingLabel" destination="POu-Bn-aGg" id="NF2-DK-7UI"/>
